--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
 python:
   - "2.7"
   - "3.4"
-script: nosetests --with-coverage
+script: nosetests --with-coverage --cover-package=functional
 after_success:
   - coveralls
