--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
 python:
   - "2.7"
   - "3.4"
+  - "pypy" 
+  - "pypy3" 
 script: nosetests --with-coverage --cover-package=functional
 after_success:
   - coveralls
