--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - pip install -q coverage
   - pip install python-coveralls
   - pip install enum34
+  - pip install future
 python:
   - "2.7"
   - "3.4"
