--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ python:
   - "3.4"
   - "pypy" 
   - "pypy3" 
-script: nosetests --with-coverage --cover-package=functional
+script: nosetests --with-coverage --cover-package=functional && pylint functional
 after_success:
   - coveralls
