--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ install:
   - pip install python-coveralls
   - pip install enum34
   - pip install future
+  - pip install pylint
 python:
   - "2.7"
   - "3.4"
-  - "pypy" 
-  - "pypy3" 
+  - "pypy"
+  - "pypy3"
 script: nosetests --with-coverage --cover-package=functional && pylint functional
 after_success:
   - coveralls
