--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ install:
   - pip install -q coverage
   - pip install python-coveralls
   - pip install future
-  - pip install hg+https://bitbucket.org/logilab/pylint/@92341b86dca5863f50b090fc0697503d45100240#egg=pylint
+  - pip install hg+https://bitbucket.org/logilab/pylint@master
+  - pip install hg+https://bitbucket.org/logilab/astroid@master
   - bash .travis-install.sh
 notifications:
   webhooks:
