Revert to using standard pylint instead of master since 1.5 is out

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ install:
   - pip install -q coverage
   - pip install python-coveralls
   - pip install future
-  - pip install hg+https://bitbucket.org/logilab/pylint@master
-  - pip install hg+https://bitbucket.org/logilab/astroid@master
+  - pip install pylint
 notifications:
   webhooks:
     urls:
