--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install -q coverage
   - pip install future
   - pip install pylint
+  - pip install pandas
 notifications:
   webhooks:
     urls:
