Use pylint/astroid pinned master to get 3.6 support, clean up new lints

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ before_install:
   - pip install codecov
 install:
   - pip install -q coverage
-  - pip install pylint
+  - pip install git+https://github.com/PyCQA/pylint.git@7daed7b8982480c868b0f642a5251f00ffb253c6
+  - pip install git+https://github.com/PyCQA/astroid.git@d0b5acdfebcdda5c949584c32a8cbc0f31d5cf25
   - pip install -r requirements.txt
   - pip install $EXTRA_INSTALLS
 
