--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py36,py37,pypy,pypy3}-{pandas,nopandas},lint
+envlist = {py27,py33,py34,py36,py37}-{pandas,nopandas},{pypy,pypy3}-{nopandas},lint
 
 [testenv]
 deps =
