Split coverage. Specify which environment to run coverage and linting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 before_install:
-- pip install codecov pypandoc
+- pip install pypandoc
 install:
 - pip install tox-travis
 addons:
