--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,22 @@
 [tox]
-envlist = {py27,py33,py34,py36,py37}-{pandas,nopandas},{pypy,pypy3}-{nopandas},lint
+envlist = {py27,py33,py34,py36,py37}-{pandas,nopandas},{pypy,pypy3}-{nopandas},coverage-{pandas,nopandas},lint
+
+[travis]
+python =
+  3.6: py36, coverage, lint
 
 [testenv]
 deps =
     -rrequirements.txt
+    nose
+    pandas: pandas
+commands =
+    nosetests
+
+[testenv:coverage]
+deps =
+    -rrequirements.txt
+    codecov
     coverage
     nose
     pandas: pandas
