--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Pedro Rodriguez <me@pedro.ai>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.6.1>= || 3.7.*"
+python = "3.6.1>="
 dill = "^0.2.5"
 tabulate = "<=1.0.0"
 pandas = {version = "^1.0.3", extras = ["all"]}
