--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip poetry
         poetry install
-        apt install pandoc
+        sudo apt-get install pandoc
     - name: Pylint
       run: poetry run pylint functional
       if: always()
