Add codecov again

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -40,5 +40,7 @@ jobs:
       if: always()
     - name: Test with pytest
       run: |
-        poetry run pytest --cov=functional
+        poetry run pytest --cov=functional --cov-report=xml
       if: always()
+    - uses: codecov/codecov-action@v1
+      file: ./coverage.xml
