--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -43,4 +43,5 @@ jobs:
         poetry run pytest --cov=functional --cov-report=xml
       if: always()
     - uses: codecov/codecov-action@v1
-      file: ./coverage.xml
+      with:
+        file: ./coverage.xml
