Make dill requirements for flexible to work with Apache Beam reqs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "PyFunctional"
-version = "1.4.2"
+version = "1.4.3"
 description = "Package for creating data pipelines with chain functional programming"
 authors = ["Pedro Rodriguez <me@pedro.ai>"]
 maintainers = ["Pedro Rodriguez <me@pedro.ai>"]
@@ -29,7 +29,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.6,>=3.6.1"
-dill = "^0.3.2"
+dill = ">=0.2.5"
 tabulate = "<=1.0.0"
 pandas = {version = "^1.0.3", optional = true}
 
