--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ maintainers = ["Pedro Rodriguez <me@pedro.ai>"]
 readme = "README.md"
 homepage = "https://github.com/EntilZha/PyFunctional"
 repository = "https://github.com/EntilZha/PyFunctional"
-documentation = "https://docs.pyfunctional.org/en/master/"
+documentation = "https://docs.pyfunctional.pedro.ai/en/master/"
 keywords = ["functional", "pipeline", "chain"]
 license = "MIT"
 classifiers = [
