--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ all = ["pandas"]
 
 [tool.poetry.dev-dependencies]
 pypandoc = "^1.5"
-black = "^19.10b0"
+black = "^23.1"
 pytest = "^7.3.1"
 pylint = "^2.17.4"
 pytest-cov = "^4.0.0"
