--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ pytest-cov = "^4.0"
 codecov = "^2.0.22"
 coverage = "^5.0.0"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.1.1"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
