--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -15,12 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
-        #include:
-        #  - python-version: 3.6
-        #    use_pandas: 1
-        #  - python-version: 3.7
-        #    use_pandas: 1
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
