--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,10 @@ all = ["pandas"]
 [tool.poetry.dev-dependencies]
 pypandoc = "^1.5"
 black = "^19.10b0"
-pytest = "^5.4.1"
-pylint = "^2.4.4"
-pytest-cov = "^2.8.1"
-coverage = "<5.0.0"
+pytest = "^7.3.1"
+pylint = "^2.17.4"
+pytest-cov = "^4.0.0"
+coverage = "^7.2.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
