--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -5,43 +5,38 @@ name: Python package
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [master, dev]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8]
-        #include:
-        #  - python-version: 3.6
-        #    use_pandas: 1
-        #  - python-version: 3.7
-        #    use_pandas: 1
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip poetry
-        poetry install
-        sudo apt-get install pandoc
-    - name: Pylint
-      run: poetry run pylint functional
-      if: always()
-    - name: black
-      run: poetry run black --check functional
-      if: always()
-    - name: Test with pytest
-      run: |
-        poetry run pytest --cov=functional --cov-report=xml
-      if: always()
-    - uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage.xml
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip poetry
+          poetry install
+          sudo apt-get install pandoc
+      - name: Pylint
+        run: poetry run pylint functional
+        if: always()
+      - name: black
+        run: poetry run black --check functional
+        if: always()
+      - name: Test with pytest
+        run: |
+          poetry run pytest --cov=functional --cov-report=xml
+        if: always()
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage.xml
