Add mypy auto check and fix easy errors
Summary:

Add mypy automated check and fix any of the easy errors that don't result in functional changes

Test Plan:

Run `mypy functional`

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy3.9"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy3.9"]
         include:
           - python-version: "3.11"
             use_pandas: 1
@@ -34,6 +34,9 @@ jobs:
         if: always()
       - name: Test with pytest
         run: poetry run pytest --cov=functional --cov-report=xml
+        if: always()
+      - name: mypy
+        run: mypy functional
         if: always()
       - uses: codecov/codecov-action@v1
         with:
