--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ classifiers = [
     'Development Status :: 5 - Production/Stable',
     'Intended Audience :: Developers',
     'License :: OSI Approved :: MIT License',
-    'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
@@ -28,7 +27,7 @@ classifiers = [
 packages = [{ include = "functional" }]
 
 [tool.poetry.dependencies]
-python = "^3.7.2"
+python = "^3.8.0"
 dill = ">=0.2.5"
 tabulate = "<=1.0.0"
 pandas = { version = "^1.0.3", optional = true }
@@ -45,6 +44,8 @@ coverage = "^7.2.5"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.1.1"
+types-tabulate = "^0.9.0.3"
+pandas-stubs = "^2.0.3.230814"
 
 [build-system]
 requires = ["poetry>=0.12"]
