--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,6 +41,7 @@ jobs:
       - uses: tsuyoshicho/action-mypy@v4
         with:
           level: warning
+          execute_command: "poetry run mypy"
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage.xml
