--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ coverage = "^7.2.5"
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
 types-tabulate = "^0.9.0.3"
-pandas-stubs = "^2.0.3.230814"
+pandas-stubs = { version = "^2.0.3.230814", optional = true }
 
 [build-system]
 requires = ["poetry>=0.12"]
