--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,6 @@ pandas-stubs = { version = "^2.0.3.230814", optional = true }
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pytest.ini_options]
+doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
