--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,19 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
-      # - id: trailing-whitespace
-      # - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint functional --rcfile=pylintrc
+        language: python
+        additional_dependencies: [pylint, tabulate]
+        pass_filenames: false
   - repo: https://github.com/psf/black
-    rev: 24.4.2
+    rev: 23.12.1
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-mypy
