--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ black = "^23.1"
 pytest = "^7.3.1"
 parametrize = "^0.1.1"
 pylint = "^2.17.4"
+ruff = "^0.9.2"
 pytest-cov = "^4.0.0"
 coverage = "^7.2.5"
 mypy = "^1.1.1"
