Include the Python version in step names

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -27,15 +27,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - run: poetry install
-      - name: Pylint
+      - name: Pylint (Python v${{ matrix.python-version }})
         run: poetry run pylint functional
-      - name: black
         run: poetry run black --check functional
+      - name: black (Python v${{ matrix.python-version }})
         if: always()
-      - name: Test with pytest
+      - name: Test with pytest (Python v${{ matrix.python-version }})
         run: poetry run pytest --cov=functional --cov-report=xml
         if: always()
-      - name: mypy
+      - name: mypy (Python v${{ matrix.python-version }})
         run: poetry run mypy functional
         if: always()
       - uses: codecov/codecov-action@v1
